--- a/数逻笔记.md
+++ b/数逻笔记.md
@@ -209,14 +209,18 @@ Dimensional Block constitute by the "AND-term" in the K-map (fill 1 grid rectang
 
 性质：
 
-1. 质项都是由1个、2个、22个、23个……最小项合并而成的。
+1. 质项都是由1个、2个、2^2^个、2^3^个……最小项合并而成的。
 2. 质项都是蕴含项。
 
 is a product term obtained by combining the maximum possible number of adjacent squares in the map into a rectangle with the number of squares a power of 2.
 
 ##### Essential Prime Implicant
 
-it is the **only** prime implicant that covers (includes) one or more minterms
+> If a minterm of a function is included in only one prime implicant, that prime implicant is said to be *essential*.
+>
+> 有一个miniterm，只在这个PM中出现，这个PM就是EPM
+
+~~it is the **only** prime implicant that covers (includes) one or more minterms~~(施青松ppt里这个only乱加)
 
 without in another prime implicant.
 
@@ -234,7 +238,13 @@ Miniterm：找1
 
 Maxterm：找0取反
 
-![image-20190926152910697](数逻笔记.assets/image-20190926152910697.png)
+<img src="数逻笔记.assets/image-20190926152910697.png" alt="image-20190926152910697" style="zoom:50%;" />
+
+> In most cases, this results in a simplified, although not necessarily optimum, sum-of-products expression.
+>
+> WHY??
+
+
 
 #### Implicant Table(蕴含表达式)
 
