--- a/数逻笔记.md
+++ b/数逻笔记.md
@@ -230,7 +230,7 @@ without in another prime implicant.
 
 
 
-##### K-MAP化简
+##### K-MAP化简为AND-OR形式
 
 找相邻的、翻转对称的
 
@@ -242,10 +242,24 @@ Maxterm：找0取反
 
 > In most cases, this results in a simplified, although not necessarily optimum, sum-of-products expression.
 >
-> WHY??
+> **WHY??**
 
+##### K-MAP化简为OR-AND形式
 
+找0的 $\Longrightarrow$ 写出 $\overline F$ 的AND-OR形式 $\Longrightarrow$ 直接取反
+
+> Ex. 
+>
+> Simplify the following Boolean function in product-of-sums form:
+>
+> $F(A,B,C,D) = \Sigma m(0,1,2,5,8,9,10)$
+>The 1s marked in the map of Figure 2-20 represent the minterms of the function. The squares marked with 0s represent the minterms not included in F and therefore denote the complement of F. Combining the squares marked with 0s, we obtain the optimized complemented function
+> $\overline F= AB+CD+B\overline D$
+>Taking the dual and complementing each literal gives the complement of F.This is F in product-of-sums form:
+>
+> $F = (\overline A + \overline B)(\overline C + \overline D)(\overline B + D)$
 
 #### Implicant Table(蕴含表达式)
 
 #### Don't-Care
+
