--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -12,7 +12,7 @@ The electric property of “electric dipole ” is described by the so-called el
 
 $\vec p=q\cdot \vec d\ (\vec d方向从-q到+q)$
 
-#### ==Some conclusion==
+#### Some conclusion
 
 $$
 1.\ 无限大带电平面：E=\frac{\sigma}{2\epsilon_0}\\
@@ -161,23 +161,29 @@ $$
 可以获得\Delta V=(...)\cdot q
 $$
 
-#### ==Conclusion==
+#### Conclusion
 
 $$
-Parallel-plate\ Capacitor:C=\frac{\epsilon_0A}d\\
-Cylindrical\ Capacitor:C=2\pi\epsilon_0\frac L{ln(R)-ln(r)}\\
-Spherical\ Capacitor:C=\frac{4\pi\epsilon_0}{\frac1r-\frac1R}
+--Parallel-plate\ Capacitor--\\
+E=\frac \sigma {\epsilon_0}(G's\ Law)\\
+C=\frac{\epsilon_0A}d\\
+--Cylindrical\ Capacitor--\\
+C=2\pi\epsilon_0\frac L{ln(R)-ln(r)}\\
+--Spherical\ Capacitor--\\
+C=\frac{4\pi\epsilon_0}{\frac1r-\frac1R}
 =4\pi\epsilon_0(\frac{Rr}{R-r})
 $$
+
+**单个平行板电容器，仅在向对面有电荷，外面不带电荷**
 
 #### 串并联
 
 $$
-串联，q相同，\frac 1 C = \Sigma \frac 1 C_i；\\
-并联，V相同，C = \Sigma C_i
+Series\ Connection,串联，q相同，\frac 1 C = \Sigma \frac 1 C_i；\\
+Parallel\ Connection,并联，V相同，C = \Sigma C_i
 $$
 
-##### 重要应用
+##### 应用
 
 将导体插入平行板中，$C'=\frac{\epsilon_0A}{d-t}$(视作串联即可)
 
@@ -202,20 +208,20 @@ $$
 
 #### 多种介电质(Dielectrics)
 
-#### PP
+##### PP
 
 <img src="普物2笔记.assets/page40image3039776-0179227.jpg" alt="page40image3039776.jpg" style="zoom: 25%;" />
 
- 
+
 $$
 同并联，C=\frac {\epsilon_0A}{d}(\kappa_1+\kappa_2)
 $$
 
-#### 复杂一点：Sepherical
+##### 复杂一点：Sepherical
 
 <img src="普物2笔记.assets/page41image3052000.jpg" alt="page41image3052000.jpg" style="zoom: 50%;" />
 
- 
+
 $$
 \because C=4\pi\epsilon_e(\frac{Rr}{R-r})\\
 \frac1C=\frac1{4\pi\epsilon_0\kappa_1(\frac{ba}{b-a})}
