--- a/数据结构.md
+++ b/数据结构.md
@@ -15,6 +15,8 @@ void levelorder ( tree_ptr  tree )
 
 **Iterative Program**
 
+InOrder
+
 ```c
 void  iter_inorder ( tree_ptr  tree )
 { Stack  S = CreateStack( MAX_SIZE );
@@ -29,7 +31,14 @@ void  iter_inorder ( tree_ptr  tree )
 
 ```
 
+PreOrder
 
+先把根节点访问了，右子树入栈，去访问左子树。
 
+InOrder
 
+压右 压左 访问中
 
+PostOrder
+
+压中 压右 访问左
