--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -123,7 +123,7 @@ $$
 E_\vec l=-\frac{\partial V}{\partial\vec l}=-\nabla V
 $$
 
-#### 自能与互能
+#### ==自能与互能==
 
 $$
 U_互=\frac1 2\Sigma q_i V_{其他q在q_i处}=\frac1 2\int_? Vdq\\
@@ -210,8 +210,7 @@ $$
 
 ##### PP
 
-<img src="普物2笔记.assets/page40image3039776-0179227.jpg" alt="page40image3039776.jpg" style="zoom: 25%;" />
-
+<img src="普物2笔记.assets/page40image3039776.jpg" alt="page40image3039776.jpg" style="zoom: 25%;" />
 
 $$
 同并联，C=\frac {\epsilon_0A}{d}(\kappa_1+\kappa_2)
@@ -228,3 +227,7 @@ $$
 +\frac1{4\pi\epsilon_0\kappa_1(\frac{ba}{b-a})}\\
 \Longrightarrow C=\frac{4\pi\epsilon_0\kappa_1\kappa_2 abc}{\kappa_1a(c-b)+\kappa_2c(b-a)}
 $$
+
+#### atomic
+
+> Because the molecules are continuously jostling each other as a result of their random thermal motion, this alignment is not complete
