--- a/数逻笔记.md
+++ b/数逻笔记.md
@@ -1,5 +1,9 @@
 [TOC]
 
+> 写在之前
+>
+> 1. 施青松老师要求逻辑证明题要写出两补之间是用什么公式推出的
+
 ## 布尔代数
 
 ### Basic Equation
@@ -262,4 +266,12 @@ Maxterm：找0取反
 #### Implicant Table(蕴含表达式)
 
 #### Don't-Care
+
+## 语言
+
+```verilog
+input wire s1;
+
+reg [7:0] C;
+```
 
