--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -216,10 +216,15 @@ $$
 同并联，C=\frac {\epsilon_0A}{d}(\kappa_1+\kappa_2)
 $$
 
+若上下两种电介质
+
+$$
+C_i = /frac{/kappa _i \e}
+$$
+
 ##### 复杂一点：Sepherical
 
 <img src="普物2笔记.assets/page41image3052000.jpg" alt="page41image3052000.jpg" style="zoom: 50%;" />
-
 
 $$
 \because C=4\pi\epsilon_e(\frac{Rr}{R-r})\\
