--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -152,7 +152,7 @@ $$
 \Longrightarrow \frac {q_1} {q_2}= \frac {R_1} {R_2}
 $$
 
-### Ch26 Capacitance
+### Ch26-1 Capacitance
 
 #### 计算方式
 
@@ -206,6 +206,26 @@ U=\frac{q^2}{2C}=\frac{q^2d}{2\epsilon_0A}=\frac{\epsilon_0}2(\frac q{\epsilon_0
 u=\frac U \Omega=\frac{\epsilon_0E^2}2\\
 $$
 
+---
+
+### Ch26-2 Dielectrics
+
+#### 分子角度解释
+
+取向极化与位移极化
+
+> 取向不能完全与电场线平行的原因：Because the molecules are continuously jostling each other as a result of their random thermal motion, this alignment is not complete
+
+
+$$
+\because C=\kappa_eC_0\\
+\therefore\Delta V=\frac Q C=\frac Q{\kappa_eC_0}=\frac {\Delta V_0}{\kappa_e}\\
+\therefore E = \frac{\Delta V} d = \frac{E_0} {\kappa_e}
+$$
+Polarization (极化强度矢量P)
+
+
+
 #### 多种介电质(Dielectrics)
 
 ##### PP
@@ -225,7 +245,6 @@ $$
 ##### 复杂一点：Sepherical
 
 <img src="普物2笔记.assets/page41image3052000.jpg" alt="page41image3052000.jpg" style="zoom: 50%;" />
-
 $$
 \because C=4\pi\epsilon_e(\frac{Rr}{R-r})\\
 \frac1C=\frac1{4\pi\epsilon_0\kappa_1(\frac{ba}{b-a})}
@@ -233,6 +252,6 @@ $$
 \Longrightarrow C=\frac{4\pi\epsilon_0\kappa_1\kappa_2 abc}{\kappa_1a(c-b)+\kappa_2c(b-a)}
 $$
 
-#### atomic
+---
 
-> Because the molecules are continuously jostling each other as a result of their random thermal motion, this alignment is not complete
+#### 
