--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -8,6 +8,8 @@
 
 **A Charged Electric Dipole**：The configuration of two equal and opposite charges ±*q* separated by a small distance *d*
 
+#### Electric dipole moment $\vec p$ (电偶极矩)
+
 The electric property of “electric dipole ” is described by the so-called electric dipole moment(电偶极矩): 
 
 $\vec p=q\cdot \vec d\ (\vec d方向从-q到+q)$
@@ -210,28 +212,80 @@ $$
 
 ### Ch26-2 Dielectrics
 
-#### 分子角度解释
-
-取向极化与位移极化
-
-> 取向不能完全与电场线平行的原因：Because the molecules are continuously jostling each other as a result of their random thermal motion, this alignment is not complete
-
-
 $$
 \because C=\kappa_eC_0\\
 \therefore\Delta V=\frac Q C=\frac Q{\kappa_eC_0}=\frac {\Delta V_0}{\kappa_e}\\
 \therefore E = \frac{\Delta V} d = \frac{E_0} {\kappa_e}
 $$
-Polarization (极化强度矢量P)
+
+#### 分子角度解释
+
+取向极化(Alignment polarization)与位移极化(displacement polarization)
+
+> 取向不能完全与电场线平行的原因：Because the molecules are continuously jostling each other as a result of their random thermal motion, this alignment is not complete
+
+#### Polarization (极化强度矢量P(大写))
 
 
+$$
+\vec P = \frac{\Sigma\vec {p_i}}{\Delta V}\\
+此处\Delta V表示体积\\
+dQ'=qdN=qndV=qnlcos\theta dA=PdAcos\theta=\vec P\cdot d\vec A\\
+\therefore \sigma' = \frac {dQ'}{dA}=Pcos\theta =\vec P \cdot \vec n = P_{\vec n}\\
+$$
+
+#### Depolarization field E’ (退极化场)
+
+$$
+\vec E = \vec {E_0} + \vec {E'}
+$$
+
+#### Polarization law of dielectrics (电介质的极化规律)
+
+$$
+\vec P \Longrightarrow \sigma' \Longrightarrow \vec E' \Longrightarrow \vec E\\
+$$
+
+#### $\chi_e$: Polarization coefficient (极化率)
+
+for general isotropic(各向同性) materials 
+$$
+\vec P = \chi_e \epsilon_0 \vec E\\
+其中，\kappa_e = \chi_e + 1
+$$
+
+#### Electric displacement vector $\vec D$ (电位移矢量)
+
+$$
+In\ Dielectric,\ \vec E \neq 0\\
+\vec {E_0} \longrightarrow \vec P \longrightarrow \sigma_e' \longrightarrow \vec{E'} \longrightarrow \vec E = \vec {E_0} + \vec {E'}\\
+Proof:\\
+在某电介质中，有带电+Q_0的球\\
+\oiint \vec P \cdot d \vec A = - \Sigma_{ins} q'？？？
+(\sigma' = P)\\
+\therefore \epsilon_0 \oiint \vec E \cdot d \vec A
+= \Sigma_{ins} (q_0 + q')
+= \Sigma_{ins}q_0 - \oiint \vec P \cdot d \vec A\\
+\therefore \oiint (\epsilon_0 \vec E + \vec P) \cdot d \vec A
+= \Sigma_{ins}q_0\\
+\vec D \overset {\triangle} {=} \epsilon_0 \vec E + \vec P\\
+\therefore \oiint \vec D \cdot d \vec A
+= \Sigma_{i}q_0\\
+Also,\ \vec D = \epsilon_0 \vec E + \vec P\\
+= \epsilon_0 \vec E + \chi_e \epsilon_0 \vec E\\
+= (1+\chi_e)\epsilon_0 \vec E\\
+= \kappa_e \epsilon_0 \vec E
+$$
+
+
+
+证明用图：<img src="普物2笔记.assets/image-20191013182554314.png" alt="image-20191013182554314" style="zoom:35%;" />
 
 #### 多种介电质(Dielectrics)
 
 ##### PP
 
 <img src="普物2笔记.assets/page40image3039776.jpg" alt="page40image3039776.jpg" style="zoom: 25%;" />
-
 $$
 同并联，C=\frac {\epsilon_0A}{d}(\kappa_1+\kappa_2)
 $$
@@ -239,7 +293,7 @@ $$
 若上下两种电介质
 
 $$
-C_i = /frac{/kappa _i \e}
+C_i = \frac{\kappa _i \epsilon_0 A}{d_i}\\
 $$
 
 ##### 复杂一点：Sepherical
@@ -254,4 +308,3 @@ $$
 
 ---
 
-#### 
