--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -213,9 +213,14 @@ $$
 ### Ch26-2 Dielectrics
 
 $$
+--Q\ is\ constant--\\
 \because C=\kappa_eC_0\\
 \therefore\Delta V=\frac Q C=\frac Q{\kappa_eC_0}=\frac {\Delta V_0}{\kappa_e}\\
-\therefore E = \frac{\Delta V} d = \frac{E_0} {\kappa_e}
+\therefore E = \frac{\Delta V} d = \frac{E_0} {\kappa_e}\\
+----\\
+另外有，\\
+\because \frac {(Q_0 - Q')}{\epsilon_0A} = E = \frac {E_0}{\kappa_e} = \frac {Q_0} {\kappa_e \epsilon_0 A}\\
+\therefore Q_0 = \kappa_e (Q_0 - Q') \longrightarrow Q' = (1-\frac 1 {\epsilon_e})Q_0
 $$
 
 #### 分子角度解释
@@ -232,6 +237,7 @@ $$
 此处\Delta V表示体积\\
 dQ'=qdN=qndV=qnlcos\theta dA=PdAcos\theta=\vec P\cdot d\vec A\\
 \therefore \sigma' = \frac {dQ'}{dA}=Pcos\theta =\vec P \cdot \vec n = P_{\vec n}\\
+(\oiint_{(s)}\vec P \cdot d \vec A = - \Sigma_{(ins)}q'_i)
 $$
 
 #### Depolarization field E’ (退极化场)
@@ -271,7 +277,7 @@ Proof:\\
 \vec D \overset {\triangle} {=} \epsilon_0 \vec E + \vec P\\
 \therefore \oiint \vec D \cdot d \vec A
 = \Sigma_{i}q_0\\
-Also,\ \vec D = \epsilon_0 \vec E + \vec P\\
+*-Also,\ \vec D = \epsilon_0 \vec E + \vec P\\
 = \epsilon_0 \vec E + \chi_e \epsilon_0 \vec E\\
 = (1+\chi_e)\epsilon_0 \vec E\\
 = \kappa_e \epsilon_0 \vec E
@@ -306,5 +312,16 @@ $$
 \Longrightarrow C=\frac{4\pi\epsilon_0\kappa_1\kappa_2 abc}{\kappa_1a(c-b)+\kappa_2c(b-a)}
 $$
 
----
+### Ch27 Ohm's Law
 
+Electric Density (电流密度)
+$$
+j = \frac {di}{dS_{\bot}} = \frac {dq}{dtdS_\bot} 
+$$
+Drift Velocity $v_d$ (漂移速度)
+
+载流子移动速度
+$$
+i = -e \cdot n \cdot (Av_d)\\
+j = \frac i A = -nev_d
+$$
