--- a/普物2重要公式.md
+++ b/普物2重要公式.md
@@ -30,5 +30,17 @@ U=\frac{q^2}{2C}=\frac{q\Delta V}2\\
 u_{PP}=\frac U \Omega=\frac{\epsilon_0E^2}2\\
 $$
 
+###### 电介质
+
+$$
+\Delta V = \frac {\Delta V_0}{\kappa_e},E = \frac{E_0} {\kappa_e}(Q\ is\ constant)\\
+Q_0 = \kappa (Q_0 - Q')\\
+\vec P = \frac{\Sigma\vec {p_i}}{\Delta V}\\
+\sigma' = Pcos\theta =\vec P \cdot \vec n = P_{\vec n}\\
+\vec P = \chi_e \epsilon_0 \vec E \ (\kappa_e = \chi_e + 1)\\
+\vec D = \epsilon_0 \vec E + \vec P = \kappa_e \epsilon_0 \vec E\\
+\oiint \vec D \cdot d \vec A = \Sigma_{(ins)}q_0\\
+$$
+
 
 
