--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -225,7 +225,7 @@ $$
 
 #### 分子角度解释
 
-取向极化(Alignment polarization)与位移极化(displacement polarization)
+取向极化(Alignment polarization)与位移极化(Displacement polarization)
 
 > 取向不能完全与电场线平行的原因：Because the molecules are continuously jostling each other as a result of their random thermal motion, this alignment is not complete
 
