--- a/概统.md
+++ b/概统.md
@@ -121,3 +121,41 @@ P(x_1 < X \leqslant x_2, y_1 < Y \leqslant y_2) = F(x_2, y_2) - F(x_1, y_2) - F(
 $$
 
 #### 边际
+
+$$
+P_X(x) = f_X(x) = \int_{-\infin}^{+\infin}f(x,y)dy\\
+P_Y(y) = f_Y(y) = \int_{-\infin}^{+\infin}f(x,y)dx\\
+$$
+
+#### 条件
+
+$$
+F_{Y|X}(y|x) = P(Y \leqslant y | X = x )\\
+$$
+
+### 密度函数
+
+#### 联合
+
+$$
+
+$$
+
+#### 边际
+
+$$
+f_X(x) = \int_{-\infin}^{+\infin}f(x,y)dy\\
+f_Y(y) = \int_{-\infin }^{+\infin}f(x,y)dx\\
+$$
+
+#### 条件
+
+$$
+f_{X|Y}(x|y) = \frac{f(x,y)}{f_Y(y)}, f_Y(y) \neq 0\\
+f(x,y) = f_{X|Y}(x|y)f_Y(y) = f_{Y|X}(y|x)f_X(x)\\
+P\{Y \in D_y | X = x\} = \int_{D_y} f_{Y|X}(y|x) dy
+= \int_{D_y} \frac {f(x,y)} {f_X(x)}dy = \frac {\int_{D_y} f(x,y)dy} {f_X(x)}\\
+若 {D_y} = (a,b), 则为\int_a^b f_{Y|X}(y|x) dy\\
+f
+$$
+
