--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -325,3 +325,24 @@ $$
 i = -e \cdot n \cdot (Av_d)\\
 j = \frac i A = -nev_d
 $$
+
+### Ch29 Magnitude Force
+
+#### Magnitude Dipole
+
+- **电偶极子**是两个分隔一段距离，[电量](https://zh.wikipedia.org/wiki/电量)相等，正负相反的[电荷](https://zh.wikipedia.org/wiki/電荷)。
+- **磁偶极子**是一圈封闭循环的[电流](https://zh.wikipedia.org/wiki/電流)。例如一个有常定[电流](https://zh.wikipedia.org/wiki/電流)运行的线圈。
+
+#### Magnetic dipole moment μ
+
+<img src="普物2笔记.assets/image-20191025161954395.png" alt="image-20191025161954395" style="zoom: 33%;" />
+$$
+\vec \mu = Ni \vec A\\
+\tau = \mu B sin\theta(\theta = <\vec \mu, \vec B>)\\
+\vec \tau = \vec \mu \times \vec B\\
+Energy\ U(\theta) = -\vec \mu \cdot \vec B\\
+For\ an\ orbiting\ electron,\mu_{orb} = iA = (\frac{e}{2\pi r/v})(\pi r^2) = \frac{evr}2,\\
+???angular\ momentum(\vec L = \vec r \times \vec p)\ \vec L_{orb} = m(\vec r \times \vec v) = mrv
+$$
+
+
