--- a/概统.md
+++ b/概统.md
@@ -112,7 +112,7 @@ $$
 
 ## Ch3
 
-### 分布函数
+### 离散
 
 #### 联合
 
@@ -123,39 +123,120 @@ $$
 #### 边际
 
 $$
-P_X(x) = f_X(x) = \int_{-\infin}^{+\infin}f(x,y)dy\\
-P_Y(y) = f_Y(y) = \int_{-\infin}^{+\infin}f(x,y)dx\\
+P\{ X = x_i \} = \sum_{j=1}^{+\infin}p_{ij} \triangleq p_{i\cdot}
 $$
 
 #### 条件
 
 $$
+P\{ X=x_i|Y=y_j\} = \frac{P\{ X=x_i,Y=y_j\}}{P\{ Y=y_i\}}
+=\frac{p_{ij}}{p_{\cdot j}} \\
 F_{Y|X}(y|x) = P(Y \leqslant y | X = x )\\
 $$
 
-### 密度函数
+### 连续
 
 #### 联合
 
 $$
-
+f(x,y) = \frac{\partial^2 F(x,y)}{\partial x \partial y}\\
+P\{ (x,y) \in D \} = \mathop\iint_D f(x,y)dxdy
 $$
 
 #### 边际
 
 $$
-f_X(x) = \int_{-\infin}^{+\infin}f(x,y)dy\\
-f_Y(y) = \int_{-\infin }^{+\infin}f(x,y)dx\\
+\left \{ \begin{array}{}
+	F_X = P\{ X \leqslant x, Y< +\infin\} = F(x,+\infin)
+\end{array}\right.\\
+\left \{ \begin{array}{}
+	f_X(x) = \int_{-\infin}^{+\infin}f(x,v)dv\\
+	f_Y(y) = \int_{-\infin}^{+\infin}f(u,y)du\\
+\end{array}\right.
 $$
 
 #### 条件
 
 $$
-f_{X|Y}(x|y) = \frac{f(x,y)}{f_Y(y)}, f_Y(y) \neq 0\\
+Def:F_{Y|X}(y|x) = \lim_{\delta \rightarrow0^+}P\{ Y\leqslant y | x<X\leqslant x+\delta\}
+= ... =\int_{-\infin}^y \frac{f(x,v)}{f_X(x)}dv\\
+\Longrightarrow f_{X|Y}(x|y) = \frac{f(x,y)}{f_Y(y)}, f_Y(y) \neq 0\\
 f(x,y) = f_{X|Y}(x|y)f_Y(y) = f_{Y|X}(y|x)f_X(x)\\
-P\{Y \in D_y | X = x\} = \int_{D_y} f_{Y|X}(y|x) dy
-= \int_{D_y} \frac {f(x,y)} {f_X(x)}dy = \frac {\int_{D_y} f(x,y)dy} {f_X(x)}\\
-若 {D_y} = (a,b), 则为\int_a^b f_{Y|X}(y|x) dy\\
-f
+P\{Y \in D_y | X = x\} = \int_{D_y} f_{Y|X}(v|x) dv
+= \int_{D_y} \frac {f(x,v)} {f_X(x)}dv = \frac {\int_{D_y} f(x,v)dv} {f_X(x)}\\
+若 {D_y} = (a,b), 则为\int_a^b f_{Y|X}(v|x) dv\\
+$$
+
+### 分布模型
+
+#### 均匀分布
+
+$$
+
+$$
+
+#### 正态分布
+
+$$
+(X,Y) \sim N(\mu_1,\mu_2,\sigma_1^2,\sigma_2^2,\rho)\\
+X \sim N(\mu_1,\sigma_1^2),Y \sim N(\mu_1,\sigma_1^2),即(X,Y)边际分布为一元正态分布\\
+$$
+
+### 独立性
+
+#### 成立条件
+
+$$
+--充要条件--\\
+Def: P\{ X \in D_1, Y \in D_2\} = P\{X \in D_1\} \cdot P\{Y \in D_2\}\\
+\Rightarrow F(x,y) = F_X(x) \cdot F_Y(y)\\
+特别的，
+\left \{ \begin{array}{}
+	对离散型，有P\{ X=x_i, Y=y_i\} = P\{ X=x_i\}P\{ Y=y_i\}\\
+	对连续型，有f(x,y) = f_X(x) \cdot f_Y(y)\\
+\end{array} \right.\\
+定理：除面积为0的区域外，f(x,y)可表示为m(x )\cdot n(y)\\
+--充分条件--\\
+--必要条件--\\
+相关系数\rho = 0\\
+特别的，对于二元正态分布，\rho=0 为充要条件
+$$
+
+#### 多元
+
+### 随机变量函数(换元)
+
+#### 离散型
+
+$$
+P\{ Z = z_k\} = P\{X+Y=z_k\} = \sum_{i=1}^{+\infin} P\{ X=x_i,Y=z_k-x_i \}
+= \sum_{i=1}^{+\infin} P\{ X=z_k-y_i,Y=y_i \}
+$$
+
+| $x_i$ | $y_i$ | $z_i$ | $x_i$ | $z_k-x_i$ |
+| :---: | :---: | :---: | :---: | :-------: |
+|   1   |   4   |   7   |   1   |     6     |
+|   2   |   5   |       |   2   |     5     |
+|   3   |   6   |       |   3   |     4     |
+|   4   |   7   |       |   4   |    N/A    |
+|   5   |   8   |       |   5   |    N/A    |
+|   6   |   9   |       |   6   |    N/A    |
+
+
+
+#### 连续型
+
+$$
+F_Z(z) = P(Z \leqslant z) = P(X+Y \leqslant z)
+= \mathop\iint_{x+y\leqslant z} f(x,y)dxdy
+= \int_{-\infin}^{+\infin}dx\int_{-\infin}^{z-x}f(x,y)dy\\
+作积分变换
+\left \{ \begin{array}{}
+	u = x\\
+	v = x + y
+\end{array} \right.
+，在这样的变换下dxdy = dudv =dx(dx+dy)\\
+可得F_z(z) = \int_{-\infin}^z dv \int_{-\infin}^{+\infin}f(u,v-u)du\\
+\therefore f_z(z) = \frac{d\int_{-\infin}^z dv \int_{-\infin}^{+\infin}f(u,v-u)du}{dz} = \int_{-\infin}^{+\infin}f(x,v-u)dz
 $$
 
