--- a/Assembly笔记/19-10-16.md
+++ b/Assembly笔记/19-10-16.md
@@ -104,7 +104,7 @@ int main() {
 | :--: | :--: | :--: | :--: | :--: | :--: | :-----------: | :-----------: |
 | and  |  or  | xor  | not  | shl  | shr  | rol//循环左移 | ror//循环右移 |
 
-
+==sh若移动位数超过1位则必须将移动位数存在cl`shl reg,cl`==
 
 设AL=1011 0110
 rol al, 1; 表示把AL循环左移1位
@@ -125,7 +125,6 @@ and ax, 000Fh
 
 
 <center><b><font size = '6'>EAX是32位reg，AX是16位</font></b></center>
-
 
 运用rol指令把32位整数转化成16进制格式输出:
 
