--- a/Assembly笔记/_汇编总结.md
+++ b/Assembly笔记/_汇编总结.md
@@ -57,3 +57,44 @@ ah = 1h：读入一个字符，存在AL(按回车则是0Dh而不是0Ah)
 ah = 9h：输出首地址存在DX的'$'结尾的字符串
 
 ah = 2h：输出DL中单个字符
+
+
+
+#### add(mov, sub同)
+
+* 操作数
+  * add reg, reg
+  
+    * add ax, bh 会报错
+  
+  * add reg, const (如2)
+  
+  * add reg, var (如ds:[1000h])
+  
+  * add var, reg
+  
+  * add var, const 
+  
+    * add ==word ptr ds:[1000h]==, 2
+  
+      * ==word prt 用于申明数据类型为word==
+  
+      * Ex.
+  
+        ```assembly
+        ;ds:[1000h]为FE，ds:[1001h]为01
+        
+        add word ptr ds:[1000h], 2
+        ;变为0200h
+        
+        add byte ptr ds:[1000h], 2
+        ;变为0100h(低位的溢出不影响到高位)
+        ```
+  
+        
+  
+      * 类似还有 byte ptr, dword ptr
+  
+  * ~~add var, var~~
+  
+  * ~~add 段寄存器,段寄存器~~
