--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -2,7 +2,7 @@
 
 [TOC]
 
-## Electric
+## *Electric
 
 ### Ch22-2 Electric Field
 
@@ -326,7 +326,7 @@ i = -e \cdot n \cdot (Av_d)\\
 j = \frac i A = -nev_d
 $$
 
-## Magnet
+## *Magnet
 
 ### Ch29 Magnitude Force
 
@@ -376,9 +376,7 @@ $$
 
 ### Ch30 Current – Produced Magnetic Fields 
 
-#### 电流生磁
-
-Biot-Savart
+#### Biot-Savart
 
 $$
 dB = \frac{\mu_0}{4\pi} \frac{i\ dl\ sin\theta}{r^2}\\
@@ -386,6 +384,8 @@ d\vec B = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \hat r}{r^2}
 = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \vec r}{r^3}\\
 \vec r：电流微元所在点到目标点(求B处)的位移矢量
 $$
+
+#### 电流生磁
 
 ##### Conclusion
 
@@ -404,6 +404,8 @@ B = \int_a^b dB= \frac{i\mu_0R}{4\pi} \int_a^b \frac{dl}{(R^2+L^2)^\frac 3 2}
 \\
 \therefore B = \frac{\mu_0i}{4\pi R} (\frac L {\sqrt{R^2+L^2}})|_{L=a}^{b}
 $$
+
+---
 
 
 $$
@@ -462,4 +464,55 @@ $$
 右式正方向同\vec L(\vec n)
 \\
 若导线有限长，则必存在一曲面使得该面上净电流为0，因此安培定律不适用
+$$
+
+### Ch31 Self-Induction
+
+#### Gauss's Law
+
+$$
+\left \{ \begin{array}{}
+	\Phi_E = \oint \vec E \cdot d\vec A = \frac{q_i}{\epsilon_0}\\
+	\Phi_B = \oint \vec B \cdot d\vec A = 0\\
+\end{array} \right.
+$$
+
+#### Faraday’s Law(感应电动势)
+
+$$
+\epsilon = \oint \vec E \cdot d \vec s = -\frac{d\Phi _B}{dt} 【s为长度量】
+$$
+
+#### Inductance
+
+$$
+Def: L = \frac{N\Phi_B}{i},\Psi_B = N\Phi B=Li
+\\
+\frac L l = \mu_0n^2A(solenoid)
+\\
+Combine\ FL,\ \Phi_L = -\frac{d\Psi_B}{dt} = -L\frac{di}{dt}
+$$
+
+#### 动生电动势
+
+$$
+\Delta V = -\int \vec E \cdot d \vec l = \int (\vec v \times \vec B) \cdot d \vec l
+$$
+
+#### 动感混合
+
+Ex.
+$$
+(使用矩形模型)
+\\---1---\\
+V_动 = v_\perp l_\perp B_{t_0};
+\\
+V_感 = A \frac{dB}{dt};
+\\
+V_合 = V_动+V_感;
+\\---2(推荐使用此种，防止出现错误)---\\
+\Phi = (B_{t_0} + \frac{dB}{dt}t)(A+vt \cdot l)
+\\
+V = |-\frac{d\Phi}{dt}| = \frac{d(AB_{t_0}+(vlB_{t_0}+A\frac{dB}{dt})t)+o(dt)}{dt}
+= vlB_{t_0} + A \frac{dB}{dt};
 $$
