--- a/概统笔记.md
+++ b/概统笔记.md
@@ -42,11 +42,11 @@ $$
 
 ## Ch2
 
-### 离散型
+### 离散型(泊松、、、)
 
 $$
 二项分布\\
---Poisson distribution--\\
+--Poisson-泊松分布-distribution--\\
 P(X = K) = \frac {e ^ {-\lambda}\lambda ^ k} {k!}\\
 nota:X\sim P(\lambda)\\
 cha:二项分布中n足够大，p充分小，\lambda = np\\
@@ -60,14 +60,14 @@ P(X = k) = C_{k-1}^{r-1} p^r (1-p)^{k-r},k = r, r+1, ...;r \in Z^+; 0<p<1 \\
 实验进行到出现r次成功时的实验次数X的分布\\
 $$
 
-### 连续型
+### 连续型(均匀、正态、指数)
 
 $$
 --UD--\\
 nota: X \sim U(a,b)\\
 --ND--\\
 nota: X \sim N(\mu, \sigma^2)\\
-f(x) = \frac 1 {\sqrt{2\pi}\sigma} e^{-\frac{(e-\mu)^2}{\sigma^2}}\\
+f(x) = \frac 1 {\sqrt{2\pi}\sigma} e^{-\frac{(x-\mu)^2}{2\sigma^2}}\\
 --exp\ D--\\
 nota:X \sim E(\lambda)\\
 f(x) = 
@@ -90,7 +90,7 @@ P(X \leqslant b) = \Phi(\frac {b-\mu} \sigma)\\
 \Phi(x) = 1 - \Phi (-x)
 $$
 
-### 分布函数的换元
+### 随机变量函数、分布函数的换元
 
 $$
 已知：Y = g(X), f_X(x)\\
@@ -259,7 +259,7 @@ dxdy = dxdy
 \\
 \left \{ \begin{array}{}
 	f_Z(z) = \int_{-\infty}^{+\infty} f(x,z-x)dx\\
-	f_Z(z) = \int_{-\infty}^{+\infty}f_X(x)f_Y(z-x)dx\\
+	f_Z(z) = \int_{-\infty}^{+\infty}f_X(x)f_Y(z-x)dx(仅X与Y独立时成立)\\
 	f_Z(z) = \frac{dF_Z}{dz}\\
 \end{array} \right.
 $$
@@ -287,5 +287,39 @@ F_{min}(z) = 1 - P(X > z, Y > z) \xlongequal{X,Y独立} 1- (1-F_X(z)) \cdot (1-F
 推广到n个相互独立的随机变量，分布函数为F_i(t)\\
 F_{max}(t) = \prod_{i=1}^n F_i(t)\\
 F_{min}(t) = 1 - \prod_{i=1}^n [1-F(t)]
+$$
+
+## Ch4
+
+### 定义
+
+$$
+E(X) = \sum_{i=i_0}^{+\infty}x_ip_i\\
+E(X) = \int_{-\infty}^{+\infty} xf(x)dx
+$$
+
+### 特殊模型
+
+$$
+--泊松分布--\\
+E(X) = \sum_{k=0}^{+\infty}k \frac{e^{-\lambda}\lambda^k}{k!}
+= 0 + \lambda e^{-\lambda} \sum_{k'=1}^{+\infty}\frac{\lambda^{(k'-1)}}{(k'-1)!}
+= \lambda e^{-\lambda} \cdot e^\lambda = \lambda
+\\
+--指数分布--\\
+E(X) = \int_{0}^{+\infty} x \cdot (\lambda e^{-\lambda x})dx
+\xlongequal{分部求导} -(xe^{-\lambda x})|_{x=0}^{+\infty} + \int_{0}^{+\infty}e^{-\lambda x}dx
+= \frac 1 \lambda
+\\
+--标准N--\\
+E(X) = 0
+$$
+
+### 随机变量函数
+
+$$
+Y= g(X), 且 \sum/\int |g(x)|f(x) 存在（绝对收敛） \Longrightarrow E(Y) = \int_{-\infty}^{+\infty} g(x)f(x)dx\\
+h(X,Y)，若\int h(x,y)dxdy绝对收敛 \Longrightarrow E(h(X,Y))
+= \iint h(x,y)f(x,y)dxdy\\
 $$
 
