--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -4,6 +4,10 @@
 
 ## *Electric
 
+> 引入常量：$\epsilon_0 = 8.854 \times 10^{-12} F \cdot m$
+>
+> $[\epsilon_0] = F \cdot m = C \cdot V^{-1} \cdot m$ 
+
 ### Ch22-2 Electric Field
 
 **A Charged Electric Dipole**：The configuration of two equal and opposite charges ±*q* separated by a small distance *d*
@@ -14,19 +18,41 @@ The electric property of “electric dipole ” is described by the so-called el
 
 $\vec p=q\cdot \vec d\ (\vec d方向从-q到+q)$
 
+##### 电偶极矩的电场
+
+推导很麻烦，结论也不好记，看看就好吧能记尽量记
+
+$\vec{E_p} = \frac1{4\pi\epsilon_0r^3}(-\vec p+3\frac{\vec r \cdot (\vec r \cdot \vec p)}{r^2})$($\vec r$为从dipole中心到该点的位移矢量)
+
+##### 能量
+
+$U = W_{+q\rightarrow\infty}+W_{-q\rightarrow\infty} = qU_+ +(-q)U_- = q(U_+-U_-) = q(-Elcos<\vec E, \vec l>) \\ = -\vec p \cdot \vec E$
+
 #### Some conclusion
 
-$$
-1.\ 无限大带电平面：E=\frac{\sigma}{2\epsilon_0}\\
-2.\ 无限长带电棒：E=\frac{\lambda}{2\pi\epsilon_0r}\\
-3.\ 带电圆环：E=\frac{1}{4\pi\epsilon_0}\frac{\lambda(2\pi R)z}{(R^2+z^2)^\frac{3}{2}}\hat k=\frac{1}{4\pi\epsilon_0}\frac{qz}{(R^2+z^2)^\frac{3}{2}}\hat k\\
-4.\ 带电圆盘：\frac{\sigma}{2\epsilon_0}(1-\frac{z}{\sqrt{z^2+R^2}})\hat k\\
-当z\gg R，等效为点电荷，\frac{z}{\sqrt{z^2+R^2}}=[1+\frac{R^2}{z^2}]^{-\frac1 2}\approx 1-\frac 1 2\frac{R^2}{z^2}，代入得E=\frac{q}{4\pi \epsilon_0z^2}\hat k\\
-当R\gg z，等效为无限面，E=\frac{\sigma}{2\epsilon_0}\hat k\\
-5.\ 球、球壳均可等效为点电荷。
-$$
+**==一些较复杂的可通过求电势的方向导数获得==**(Ex.大物P44)
+
+
+- 无限大带电平面：$E=\frac{\sigma}{2\epsilon_0}$
+- 有限长带电棒任意点：$\left\{\begin{array}{}	E_x = \frac{\lambda}{4\pi\epsilon_0z}(sin\theta_2-sin\theta_1)\\E_y = \frac{\lambda}{4\pi\epsilon_0z}(cos\theta_1-cos\theta_2)	\end{array}\right.$(大物P17，挺好算的)
+
+  - 有限长带电棒中点：$E = \frac{Q}{4\pi\epsilon_0}\frac{1}{z\sqrt{(\frac L 2)^2+z^2}}$
+  - 无限长带电棒：$E=\frac{\lambda}{2\pi\epsilon_0r}$
+- 带电圆环：$E=\frac{1}{4\pi\epsilon_0}\frac{\lambda(2\pi R)z}{(R^2+z^2)^\frac{3}{2}}\hat k=\frac{Q}{4\pi\epsilon_0}\frac{z}{(R^2+z^2)^\frac{3}{2}}\hat k$
+
+  - 带电圆盘：$\frac{\sigma}{2\epsilon_0}(1-\frac{z}{\sqrt{z^2+R^2}})\hat k$
+    
+    - $当z\gg R，等效为点电荷，\frac{z}{\sqrt{z^2+R^2}}=[1+\frac{R^2}{z^2}]^{-\frac1 2}\approx 1-\frac 1 2\frac{R^2}{z^2}，代入得E=\frac{Q}{4\pi \epsilon_0z^2}\hat k\\$
+    - $当R\gg z，等效为无限面，E=\frac{\sigma}{2\epsilon_0}\hat k\\$
+- 球、球壳均可等效为点电荷。
 
 ### Ch23 Gauss's Law
+
+#### 立体角
+
+$d\Omega = sin\theta d\theta d\varphi$
+
+以观测点为球心，构造一个单位球面；任意物体投影到该单位球面上的投影面积，即为该物体相对于该观测点的立体角。因此，<u>立体角是单位球面上的一块面积，这和“平面角是单位圆上的一段弧长”类似</u>。
 
 *Electeic Flux* 电通量
 $$
@@ -51,34 +77,40 @@ $$
 
 ##### 梯度
 
+计算标量场中f的变化速率，包括该点变化率最大的大小及方向
+
+标量$\Longrightarrow$向量
+
 $$
-计算标量场中f的变化速率，包括该点变化率最大的大小及方向\\
-标量\Longrightarrow向量\\
 grad f=\nabla f
 =\frac{\partial f}{\partial x}\hat i+\frac{\partial f}{\partial y}\hat j+\frac{\partial f}{\partial z}\hat k\\
 $$
 
 ##### 散度
 
+计算向量场
+
+向量$\Longrightarrow$标量
+
 $$
-计算向量场\\
-向量\Longrightarrow标量\\
 div f=\nabla\cdot f=\frac{\partial f}{\partial x}+\frac{\partial f}{\partial y}+\frac{\partial f}{\partial z}\\
 \left \{ \begin{array}{}
 	divf>0 & 该点有散发通量的正源(发散源/source)\\
 	divf<0 & 该点有吸收通量的负源(洞或汇/sink)\\
 	divf=0 & 该点无源\\
 \end{array}\right.\\
-(若是单位体积不包含该电荷，那么毫无疑问，有多少电场线进入就有多少电场线出，散度为0；\\
-但若选取的单位体积内包含了一个正点电荷，则电场线只出不进，因而散度不为零)
 $$
+
+(若是单位体积不包含该电荷，那么毫无疑问，有多少电场线进入就有多少电场线出，散度为0；
+但若选取的单位体积内包含了一个正点电荷，则电场线只出不进，因而散度不为零)
 
 ##### 旋度
 
 [旋度 - 维基百科，自由的百科全书](https://zh.wikipedia.org/zh-hans/旋度)
 
+向量$\Longrightarrow$向量
+
 $$
-向量\Longrightarrow向量\\
 curlf=\nabla\times f= 
 \left[ \begin{array}{}
 	\frac{\partial}{\partial x} \\
@@ -98,6 +130,8 @@ curlf=\nabla\times f=
 	(\frac{\partial x}{\partial z}-\frac{\partial z}{\partial x})\hat j+
 	(\frac{\partial y}{\partial x}-\frac{\partial x}{\partial y})\hat k\\
 $$
+
+旋度与第二类曲线积分的路径无关性有联系，其运算结果与 路径无关四个等价条件 的$$可互推。
 
 ##### Ex. 场
 
@@ -119,7 +153,7 @@ $$
 从电场：\Delta V=(\int_f^\infty-\int_i^\infty)(\vec E\cdot d\vec l)=-\int_i^f\vec E\cdot d\vec l
 $$
 
-#### 电势与电压
+#### 电势与电压梯度
 
 $$
 E_\vec l=-\frac{\partial V}{\partial\vec l}=-\nabla V
@@ -141,6 +175,23 @@ $$
 > 静电能包括自能和互能。点电荷的自能是无穷大，一般在静电学问题中都不考虑点电荷的自能。
 
 互能算两次有1/2 自能无1/2
+
+**Ex.半径R带电Q的球体能量计算**
+
+<u>注意：仅在表面有电荷</u>
+$$
+U = 
+\left \{ \begin{array}{}
+	互能：\frac 1 2\int \frac{Q}{4\pi \epsilon_0 R}dq = \frac{Q}{8\pi \epsilon_0 R} \int dq
+	\\
+	自能：\int_0^Q \frac{q}{4\pi \epsilon_0 R}dq
+	\\
+	电容：\frac{Q^2}{2C} = \frac{Q^2}{2(4\pi \epsilon_0 R)}
+\end{array} \right \}
+= \frac{Q^2}{8 \pi \epsilon_0 R}
+$$
+
+*第三种算法中$C = 4\pi \epsilon_0 (\frac{\infty R}{\infty - R})$。因为仅球壳外表面(外侧)带电，因此可视作由外表面到无穷远的电容器，也可算$V = \frac{Q}{4 \pi \epsilon_0 R}, C = \frac Q V$。*
 
 ### Ch25 Conductors
 
@@ -165,37 +216,60 @@ $$
 
 #### Conclusion
 
+- **Parallel-Plate Capacitor**
+
 $$
---Parallel-plate\ Capacitor--\\
 E=\frac \sigma {\epsilon_0}(G's\ Law)\\
 C=\frac{\epsilon_0A}d\\
---Cylindrical\ Capacitor--\\
+$$
+
+- **Cylindrical Capacitor**
+
+$$
 C=2\pi\epsilon_0\frac L{ln(R)-ln(r)}\\
---Spherical\ Capacitor--\\
+$$
+
+- **Spherical Capacitor**
+
+$$
 C=\frac{4\pi\epsilon_0}{\frac1r-\frac1R}
 =4\pi\epsilon_0(\frac{Rr}{R-r})
 $$
 
 **单个平行板电容器，仅在向对面有电荷，外面不带电荷**
 
+==注意，平行板电容器的电场是$\frac \sigma {\epsilon_0}$。因为两板都有电荷，因此高斯定律得分成两部分计算==
+
 #### 串并联
 
-$$
-Series\ Connection,串联，q相同，\frac 1 C = \Sigma \frac 1 C_i；\\
-Parallel\ Connection,并联，V相同，C = \Sigma C_i
-$$
+- Series Connection, 串联，q相同，$\frac 1 C = \Sigma \frac 1 C_i$
+- Parallel Connection, 并联，V相同，$C = \Sigma C_i$
+
 
 ##### 应用
 
-将导体插入平行板中，$C'=\frac{\epsilon_0A}{d-t}$(视作串联即可)
+<u>将导体插入平行板中，$C'=\frac{\epsilon_0A}{d-t}$(视作串联即可)</u>
 
 #### 能量
+
+$$
+U =
+\left \{ \begin{array}{}
+	\frac{q^2}{2C}
+	\\
+	\frac{q \Delta V}{2}
+	\\
+	\frac{\epsilon_0 E^2 \Omega}{2}
+\end{array} \right.
+$$
 
 ##### 能量计算
 
 $$
 微分中，\left|\Delta V'\right|=\frac {q'}c，dU=dq'\left|\Delta V'\right|=\frac{q'dq'}C\\
-若全程，则U=\int_0^UdU=\int_0^q\frac{q'}Cdq'=\frac{q^2}{2C}\\
+若全程，则U=\int_0^UdU=\int_0^q\frac{q'}Cdq'
+\\
+=\frac{q^2}{2C}\\
 =\frac{q\Delta V}2\\
 (q'和\Delta V'都表示过程量)
 $$
@@ -203,25 +277,42 @@ $$
 ##### 能量密度
 
 $$
-(只针对平行板电容器)(似乎)\\
-U=\frac{q^2}{2C}=\frac{q^2d}{2\epsilon_0A}=\frac{\epsilon_0}2(\frac q{\epsilon_0A})^2(Ad)=\frac{\epsilon_0}2E^2\Omega\\
-u=\frac U \Omega=\frac{\epsilon_0E^2}2\\
+(由平行板电容器推出的普适结论)\\
+U=\frac{q^2}{2C}=\frac{q^2d}{2\epsilon A}=\frac{\epsilon}2(\frac q{\epsilon A})^2(Ad)=\frac{\epsilon}2E^2\Omega\\
+u=\frac U \Omega
+\\
+=\frac{\epsilon E^2}2
+\\
+= \frac12 DE
 $$
 
 ---
 
 ### Ch26-2 Dielectrics
 
+Q一定时，X表示插入电介质后的量值，X~0~表示真空时的量值
 $$
---Q\ is\ constant--\\
-\because C=\kappa_eC_0\\
-\therefore\Delta V=\frac Q C=\frac Q{\kappa_eC_0}=\frac {\Delta V_0}{\kappa_e}\\
-\therefore E = \frac{\Delta V} d = \frac{E_0} {\kappa_e}\\
-----\\
+\left \{ \begin{array}{}
+	C=\kappa_eC_0\\
+	\Delta V=\frac Q C=\frac Q{\kappa_eC_0}=\frac {\Delta V_0}{\kappa_e}\\
+	E = \frac{\Delta V} d = \frac{E_0} {\kappa_e}\\
+\end{array} \right.
+\\
 另外有，\\
-\because \frac {(Q_0 - Q')}{\epsilon_0A} = E = \frac {E_0}{\kappa_e} = \frac {Q_0} {\kappa_e \epsilon_0 A}\\
-\therefore Q_0 = \kappa_e (Q_0 - Q') \longrightarrow Q' = (1-\frac 1 {\epsilon_e})Q_0
+\because \frac{Q}{\epsilon_0A}
+= \frac {(Q_0 - Q')}{\epsilon_0A}
+\xlongequal[始终成立]{GaussLaw} E
+= \frac {E_0}{\kappa_e}
+= \frac {Q_0} {\kappa_e \epsilon_0 A}
+\\
+\therefore Q_0
+= \kappa_e (Q_0 - Q') \longrightarrow Q'
+= (1-\frac 1 {\epsilon_e})Q_0
 $$
+
+==不要忘了最基本的这几个==
+
+==本质上$\frac{E_0}{\kappa_e} = \frac{E}{1} = \frac{E'}{\kappa_e-1}$==
 
 #### 分子角度解释
 
@@ -231,13 +322,19 @@ $$
 
 #### Polarization (极化强度矢量P(大写))
 
-
 $$
-\vec P = \frac{\Sigma\vec {p_i}}{\Delta V}\\
+\vec P = \frac{\sum\vec {p_i}}{\Delta V}\\
 此处\Delta V表示体积\\
-dQ'=qdN=qndV=qnlcos\theta dA=PdAcos\theta=\vec P\cdot d\vec A\\
+dQ'=qdN'
+= q(\frac{dN'}{d\Delta V})lcos\theta dA =PdAcos\theta=\vec P\cdot d\vec A\\
 \therefore \sigma' = \frac {dQ'}{dA}=Pcos\theta =\vec P \cdot \vec n = P_{\vec n}\\
-(\oiint_{(s)}\vec P \cdot d \vec A = - \Sigma_{(ins)}q'_i)
+$$
+
+(可使用斜圆柱模型推导，大物P71)
+
+**一个重要结论**
+$$
+\mathop\oiint_s\vec P \cdot d \vec A = - \sum_{(ins)}q'_i
 $$
 
 #### Depolarization field E’ (退极化场)
@@ -252,38 +349,53 @@ $$
 \vec P \Longrightarrow \sigma' \Longrightarrow \vec E' \Longrightarrow \vec E\\
 $$
 
-#### $\chi_e$: Polarization coefficient (极化率)
+####  Polarization coefficient $\chi_e$ (极化率)
 
-for general isotropic(各向同性) materials 
+for general isotropic(各向同性) materials
 $$
 \vec P = \chi_e \epsilon_0 \vec E\\
-其中，\kappa_e = \chi_e + 1
+其中，\chi_e = \kappa_e - 1
 $$
 
 #### Electric displacement vector $\vec D$ (电位移矢量)
 
+$\vec D = \epsilon_0 \vec E + \vec P\\ = \epsilon_0 \vec E + \chi_e \epsilon_0 \vec E = (\kappa_e \epsilon_0) \vec E$
+
+**产生原因**：
 $$
 In\ Dielectric,\ \vec E \neq 0\\
 \vec {E_0} \longrightarrow \vec P \longrightarrow \sigma_e' \longrightarrow \vec{E'} \longrightarrow \vec E = \vec {E_0} + \vec {E'}\\
-Proof:\\
+$$
+##### 定理：环积分等于原电量
+
+$\oiint \vec D \cdot d \vec A= \Sigma_{i}q_0$(介质中的高斯定理)
+
+==因此计算时可以使用介质中的高斯定理求出D，进而用$\vec D = \kappa_e \epsilon_0 \vec E$求出E==
+
+**Proof**:
+$$
 在某电介质中，有带电+Q_0的球\\
-\oiint \vec P \cdot d \vec A = - \Sigma_{ins} q'？？？
-(\sigma' = P，然后负号是因为定义d\vec A方向向外而\vec P是向内的？)\\
+\oiint \vec P \cdot d \vec A = - \sum_{ins} q'？？？
+(\sigma' = P，然后负号是因为定义d\vec A方向向外而\vec P是向内的？)
+\\取一个包住内表面的高斯面\\
 \therefore \epsilon_0 \oiint \vec E \cdot d \vec A
-= \Sigma_{ins} (q_0 + q')
-= \Sigma_{ins}q_0 - \oiint \vec P \cdot d \vec A\\
+\xlongequal{Gauss} \sum_{ins} (q_0 + q')
+\xlongequal{上式} \sum_{ins}q_0 - \oiint \vec P \cdot d \vec A\\
 \therefore \oiint (\epsilon_0 \vec E + \vec P) \cdot d \vec A
-= \Sigma_{ins}q_0\\
+= \sum_{ins}q_0\\
 \vec D \overset {\triangle} {=} \epsilon_0 \vec E + \vec P\\
 \therefore \oiint \vec D \cdot d \vec A
-= \Sigma_{i}q_0\\
-*-Also,\ \vec D = \epsilon_0 \vec E + \vec P\\
+= \sum_{i}q_0\\
+$$
+Also
+$$
+\vec D = \epsilon_0 \vec E + \vec P\\
 = \epsilon_0 \vec E + \chi_e \epsilon_0 \vec E\\
 = (1+\chi_e)\epsilon_0 \vec E\\
 = \kappa_e \epsilon_0 \vec E
 $$
 
-
+(非正规地写成：$\vec D = \epsilon_0 \vec E_0$)
 
 证明用图：<img src="普物2笔记.assets/image-20191013182554314.png" alt="image-20191013182554314" style="zoom:35%;" />
 
@@ -293,7 +405,7 @@ $$
 
 <img src="普物2笔记.assets/page40image3039776.jpg" alt="page40image3039776.jpg" style="zoom: 25%;" />
 $$
-同并联，C=\frac {\epsilon_0A}{d}(\kappa_1+\kappa_2)
+同并联，C=\frac {\epsilon_0 \frac A2}{d}(\kappa_1+\kappa_2)
 $$
 
 若上下两种电介质
@@ -326,7 +438,67 @@ i = -e \cdot n \cdot (Av_d)\\
 j = \frac i A = -nev_d
 $$
 
+### Ch28 Circuit Theory
+
+#### Kirchhoff's Law
+
+- **First Law: Junction Rule**
+
+  At any junction in an electric circuit, the total current entering the junction must be the same as the total current leaving the junction.
+
+- **Second Law: Loop Rule**
+
+   The algebraic sum of all differences in potential around a complete circuit loop($\forall$ loop​) must be zero.
+
+**Ex.** Problem 12
+
+$\epsilon_1=10V,\epsilon_2=5V,R_1=R_2=R_3=4\Omega$
+
+<img src="普物2笔记.assets/image-20191107184215773.png" alt="image-20191107184215773" style="zoom: 50%;" />
+$$
+假设i_1向右，i_2向右，i_3向下
+\\
+\left \{ \begin{array}{}
+	i_1 = i_2 + i_3\\
+	\epsilon_1-i_1R_1-i_3R_3 = 0\\
+	-i_2R_2-\epsilon_2+i_3R_3 = 0\\
+\end{array} \right.
+\\\Longrightarrow i_1 = 1.25A, i_2 = 0
+$$
+==注意：方向应先假设，求出是负的再反向即可==
+
+#### RC Circuit(串联RC)
+
+##### 充电
+
+$$
+\epsilon - iR - \frac q C = 0 \Longrightarrow 
+i = \frac{dq}{dt} = \frac{C\epsilon-q}{RC}
+\\
+\therefore \frac{dt}{RC} = \frac{dq}{C\epsilon-q}
+\\
+解微分方程得：
+\\
+q(t) \xlongequal{\tau \triangleq RC} C\epsilon(1-e^{-\frac t \tau})
+\\
+V(t) = \frac q C = \epsilon(1-e^{-\frac t \tau})
+\\
+i(t) = \frac{dq}{dt} = \frac \epsilon Re^{-\frac t \tau}
+$$
+
+##### 放电
+
+$$
+q = q_0 e^\frac t \tau
+\\
+i = \frac \epsilon Re^{-\frac t \tau}
+$$
+
+
+
 ## *Magnet
+
+> 新引入常量：$\mu_0 = 4\pi \times 10^{-7} T \cdot m \cdot A^{-1}$
 
 ### Ch29 Magnitude Force
 
@@ -365,12 +537,18 @@ $$
 
 <img src="普物2笔记.assets/image-20191025161954395.png" alt="image-20191025161954395" style="zoom: 33%;" />
 $$
-\vec \mu = Ni \vec A\\
-\tau = \mu B sin\theta(\theta = <\vec \mu, \vec B>)\\
-\vec \tau = \vec \mu \times \vec B\\
-Energy\ U(\theta) = -\vec \mu \cdot \vec B\\
-For\ an\ orbiting\ electron,\mu_{orb} = iA = (\frac{e}{2\pi r/v})(\pi r^2) = \frac{evr}2,\\
-angular\ momentum(\vec L = \vec r \times \vec p):\ |\vec L_{orb}| = |m(\vec r \times \vec v)| = mrv\\
+\vec \mu = Ni \vec A
+\\
+\tau = \mu B sin<\vec \mu, \vec B>
+\\
+\vec \tau = \vec \mu \times \vec B
+\\
+Energy\ U(\theta) = -\vec \mu \cdot \vec B
+\\
+For\ an\ orbiting\ electron,\ \mu_{orb} = iA = (\frac{e}{2\pi r/v})(\pi r^2) = \frac{evr}2,
+\\
+angular\ momentum(\vec L = \vec r \times \vec p):\ |\vec L_{orb}| = |m(\vec r \times \vec v)| = mrv
+\\
 \therefore \vec \mu_{orb} = -\frac e {2m}\vec L_{orb}
 $$
 
@@ -378,20 +556,17 @@ $$
 
 #### Biot-Savart
 
-$$
-dB = \frac{\mu_0}{4\pi} \frac{i\ dl\ sin\theta}{r^2}\\
-d\vec B = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \hat r}{r^2}
-= \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \vec r}{r^3}\\
-\vec r：电流微元所在点到目标点(求B处)的位移矢量
-$$
+$dB = \frac{\mu_0}{4\pi} \frac{i\ dl\ sin\theta}{r^2}	\\	d\vec B = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \hat r}{r^2} = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \vec r}{r^3}$
+
+$\vec r$：电流微元所在点到目标点(求B处)的位移矢量
 
 #### 电流生磁
 
 ##### Conclusion
 
+\# THIS IS SCRIPT CALING THE MAGF OF STRAIGHT WIRE
+
 $$
-\#\ THIS\ IS\ SCRIPT
-\\
 sin\theta = \frac R {\sqrt{R^2+L^2}}
 \\
 dB= A \frac{iRdl}{(R^2+L^2)^\frac 3 2}
@@ -407,17 +582,19 @@ $$
 
 ---
 
+* **长直导线**：
 
 $$
-长直导线：
 \left \{ \begin{array}{}
 	中部：B = \frac{\mu_0i}{2 \pi R}\\
 	一端：B = \frac{\mu_0i}{4 \pi R}?\\
 \end{array} \right.\\
-弧形(单层单匝)导线圆心：B = \frac{\mu_0i\phi}{4\pi R} (\phi \leqslant 2\pi)\\
-距圆导线圆心L处：B= \frac{\mu i R^2}{2(L^2 + R^2)^\frac 3 2}\\
-(用dB = \frac{\mu_0}{4\pi} \frac{i\ ds\ sin\theta}{r^2}的定义而不是用圆环的结论-FMH's\ Page\ 27,\ WYW的没有)
 $$
+
+* **弧形(单层单匝)导线圆心**：$B = \frac{\mu_0i\varphi}{4\pi R}(\varphi \leqslant 2\pi)$
+
+* **距圆导线圆心L处**：$B= \frac{\mu_0 i R^2}{2(L^2 + R^2)^\frac 3 2} \\ (用BS定律而不是用圆环的结论-FMH's\ Slide\ 27,\ WYW的没有)$
+
 
 ##### Conclusion2 coil
 
@@ -455,16 +632,15 @@ d\vec B = \frac{\mu_0}{4\pi} \frac{dq\ \vec v \times \hat r}{r^2}
 \therefore \vec B = \frac{\mu_0}{4\pi} \frac{q\ \vec v \times \hat r}{r^2}
 $$
 
-#### Ampere's Law(电生磁)
+#### Ampere Circuital Theorem(电生磁)
 
 <img src="普物2笔记.assets/image-20191028200245926.png" alt="image-20191028200245926" style="zoom:33%;" />
-$$
-\mathop\oint_L \vec B \cdot d\vec l = \mu_0 \Sigma i(\forall surface\ binded\ by\ Amper\_Loop)
-\\
-右式正方向同\vec L(\vec n)
-\\
+
+$\mathop\oint_L \vec B \cdot d\vec l = \mu_0 \sum i_{ins}(\forall surface\ bounded\ by\ Amper\_Loop)$
+
+右式正方向同$\vec L(\vec n)$
+
 若导线有限长，则必存在一曲面使得该面上净电流为0，因此安培定律不适用
-$$
 
 ### Ch31 Self-Induction
 
