--- a/普物2重要公式.md
+++ b/普物2重要公式.md
@@ -1,27 +1,28 @@
-[TOC]
-
 ###### 电场
 
 $$
 \vec p=q\cdot \vec d\ (\vec d方向从-q到+q)\\
-E_面=\frac{\sigma}{2\epsilon_0}\\
-E_棒=\frac{\lambda}{2\pi\epsilon_0r}\\
+\vec E_{dipole}= \frac1{4\pi\epsilon_0r^3}(-\vec p+3\frac{\vec r \cdot (\vec r \cdot \vec p)}{r^2})
+\\
+E_盘 = \frac{\sigma}{2\epsilon_0}(1-\frac{z}{\sqrt{z^2+R^2}})\hat k\\
 \oint_S \vec E \cdot d\vec A=\frac{1}{ε0}\sum_{inside\ S}q_i\\
 $$
 ###### 电势
 
 $$
-混合积公式： \vec a \cdot(\vec b \times \vec c)=\vec b \cdot(\vec c \times \vec a)=\vec c \cdot(\vec a \times \vec b)\\
-V=\frac 1{4\pi\epsilon_0}\Sigma\frac{q_i}{r_i}；\\
-V=\int_r^\infty \vec E\cdot d\vec l\\
-\Delta V=-\int_i^f\vec E\cdot d\vec l\\
-U_互=\frac1 2\Sigma q_i V_{其他q在q_i处}=\frac1 2\int_? Vdq\\
-U_自=\int_0^QV_{体系中已有的电荷在dq处}dq\\
+V=\frac 1{4\pi\epsilon_0}\Sigma\frac{q_i}{r_i}
+\\
+\Delta V=-\int_i^f\vec E\cdot d\vec l
+\\
+U_互=\frac1 2\Sigma q_i V_{其他q在q_i处}=\frac1 2\int_? Vdq
+\\
+U_自=\int_0^QV_{体系中已有的电荷在dq处}dq
+\\
 $$
 ###### 电容
 
 $$
-E_{PP}=\frac \sigma {\epsilon_0}(G's\ Law)\\
+E_{PP}=\frac \sigma {\epsilon_0}(G's\ Law两板分别算)\\
 C_{PP}=\frac{\epsilon_0A}d\\
 C_柱=2\pi\epsilon_0\frac L{ln(R)-ln(r)}\\
 C_球=\frac{4\pi\epsilon_0}{\frac1r-\frac1R}
@@ -33,14 +34,80 @@ $$
 ###### 电介质
 
 $$
-\Delta V = \frac {\Delta V_0}{\kappa_e},E = \frac{E_0} {\kappa_e}(Q\ is\ constant)\\
-Q_0 = \kappa (Q_0 - Q')\\
-\vec P = \frac{\Sigma\vec {p_i}}{\Delta V}\\
-\sigma' = Pcos\theta =\vec P \cdot \vec n = P_{\vec n}\\
-\vec P = \chi_e \epsilon_0 \vec E \ (\kappa_e = \chi_e + 1)\\
-\vec D = \epsilon_0 \vec E + \vec P = \kappa_e \epsilon_0 \vec E\\
-\oiint \vec D \cdot d \vec A = \Sigma_{(ins)}q_0\\
+\left \{ \begin{array}{}
+	C=\kappa_eC_0\\
+	\Delta V=\frac Q C=\frac Q{\kappa_eC_0}=\frac {\Delta V_0}{\kappa_e}\\
+	E = \frac{\Delta V} d = \frac{E_0} {\kappa_e}\\
+\end{array} \right.
+\\
+Q_0 = \kappa (Q_0 - Q')
+\\
+\vec P = \frac{\sum\vec {p_i}}{\Delta V}
+\\
+P_{\vec n} = \sigma'
+\\
+\vec P = \chi_e \epsilon_0 \vec E
+\\
+\mathop\oiint_s\vec P \cdot d \vec A = - \sum_{ins}q'_i
+\\
+\vec D = \epsilon_0 \vec E + \vec P = (\kappa_e \epsilon_0) \vec E
+\\
+\oiint \vec D \cdot d \vec A = \sum_{ins}q_0
+\\
 $$
 
+###### 电流
 
+$$
+i = nqAv_d; j = nqv_d
+\\
+\sum \Delta V_i = 0
+\\
+q_充(t) = C\epsilon(1-e^{-\frac t \tau})
+\\
+$$
+
+---
+
+新引入常量：$\mu_0 = 4\pi \times 10^{-7} T \cdot m \cdot A^{-1}$
+
+###### 磁场力
+
+$$
+\vec F_L = q \vec v \times \vec B
+\\
+\vec F_A = i \vec L \times \vec B
+\\
+\vec \mu = Ni \vec A (磁矩)
+\\
+\vec \tau = \vec \mu \times \vec B
+\\
+U(\theta) = -\vec \mu \cdot \vec B
+$$
+
+###### 电生磁
+
+$$
+dB = \frac{\mu_0}{4\pi} \frac{i\ dl\ sin\theta}{r^2}
+\\
+d\vec B = \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \hat r}{r^2}
+= \frac{\mu_0}{4\pi} \frac{i\ d\vec l \times \vec r}{r^3}
+\\
+B_{圆导线径向} = \frac{\mu_0 i R^2}{2(L^2 + R^2)^\frac 3 2}
+\\
+\mathop\oint_L \vec B \cdot d\vec l = \mu_0 \sum i
+\\
+\Longrightarrow 
+\left \{ \begin{array}{}
+	B_{inf\ solenoid} = \mu_0ni\\
+	B_{toroid} = \frac{\mu_0Ni}{2 \pi r} \approx \mu_0ni\\
+\end{array} \right.
+$$
+
+###### 磁生电
+
+$$
+\epsilon = \oint \vec E \cdot d \vec s = -\frac{d\Phi _B}{dt}
+\\
+$$
 
