--- a/普物2笔记.md
+++ b/普物2笔记.md
@@ -499,6 +499,8 @@ $$
 ## *Magnet
 
 > 新引入常量：$\mu_0 = 4\pi \times 10^{-7} T \cdot m \cdot A^{-1}$
+>
+> $[\mu_0] = N \cdot A^{-2}(N = A \cdot m \cdot T)$
 
 ### Ch29 Magnitude Force
 
@@ -521,9 +523,13 @@ $$
 
 <img src="普物2笔记.assets/image-20191027104948806.png" alt="image-20191027104948806" style="zoom: 50%;" />
 $$
-F_\tau = N i a B sin\theta\\
-\tau = 2 F_\tau \frac b 2 =NiabBsin\theta = NiABsin\theta(\theta = <\vec n, \vec B>)\\
-\vec \tau \parallel \hat n \times \vec B\\
+F_\tau = N i a B sin\theta
+\\
+\tau = 2 F_\tau \frac b 2 =NiabBsin\theta = NiABsin\theta(\theta = <\vec n, \vec B>)
+\\
+= (NiSB)sin\theta 
+\\
+\vec \tau \parallel \hat n \times \vec B
 $$
 
 #### Magnitude Dipole
